# dj-diabetes

./: .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  dj_diabetes_examinationtypes.json  dj_diabetes_preferences.json  manage.py  requirements.txt  setup.cfg  setup.py  tox.ini
dj_diabetes/: __init__.py  admin.py  apps.py  forms.py  models.py  settings.py  tests.py  tools.py  urls.py  views.py  wsgi.py
dj_diabetes/forms/: __init__.py  appointments.py  base.py  exams.py  exercises.py  glucoses.py  issues.py  meals.py  weights.py
dj_diabetes/migrations/: 0001_initial.py
dj_diabetes/models/: __init__.py  appointments.py  exams.py  foods.py  glucoses.py  issues.py  meals.py  sports.py  weights.py
dj_diabetes/static/css/: diabetes.css
dj_diabetes/templates/: base.html
dj_diabetes/templates/dj_diabetes/: appointments_form.html  confirm_delete.html  exams_form.html  exercises_form.html  glucoses_form.html  issues_form.html  meals_form.html  userprofile_form.html  weights_form.html
dj_diabetes/templates/registration/: login.html
dj_diabetes/templatetags/: dj_diabetes_extras.py
dj_diabetes/tests/: __init__.py  test_appointments.py  test_exams.py  test_foods.py  test_glucoses.py  test_issues.py  test_meals.py  test_sports.py  test_userprofile.py  test_weights.py
dj_diabetes/views/: __init__.py  appointments.py  exams.py  exercises.py  glucoses.py  issues.py  meals.py  weights.py
