[metadata]
name=dj-diabetes
description="Django Diabetes is a personal Glucose Manager"
author=FoxMaSk
author_email=foxmask protonmail
maintainer=FoxMaSk
maintainer_email=foxmask protonmail
version=attr: dj_diabetes.__version__
url=https://github.com/push-things/dj-diabetes
download_url="https://github.com/push-things/dj-diabetes/archive/dj-diabetes-" + version + ".zip"
packages=find_packages()
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=diabetes

classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Communications
    Topic :: Database
   Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
zip_safe=false

include_package_data=true

install_requires=
    arrow==0.12.1
    Django>=2.0,<3.0
    six==1.11.0
    flake8==3.5.0


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=80
exclude=migrations,*settings.py,.tox,build